# price_algo

./: .gitignore  .zipignore  Makefile  README.md  create_zip.sh  mlflow.db  pyproject.toml  requirements.txt  run_service.py
configs/: data.yaml  service.yaml  train.yaml
docs/: API_USAGE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  MODEL_DOCUMENTATION.md  MONITORING_GUIDE.md  README.md  SETUP_GUIDE.md  TEST_ANALYSIS.md  index.md
mlflow/: docker-compose.yml
monitoring/: drift_results.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_dev_rf.ipynb  04_backtesting_walk_forward.ipynb
src/monitoring/: __init__.py  drift_detector.py  monitoring_config.py  monitoring_endpoints.py  monitoring_service.py
src/pricing_rf/: __init__.py  config.py  data.py  features.py  metrics.py  model.py  utils.py
src/service/: __init__.py  app.py  auth.py  inference.py  schemas.py
src/training/: __init__.py  objective.py  train.py
tests/: test_data.py  test_features.py  test_monitoring.py  test_service.py  test_training.py  test_utils.py
